--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #e9e8e6;
+  background: #1ab1be;
   box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.08);
   z-index: 997;
   padding: 15px 0;
@@ -134,7 +134,7 @@ h6 {
 }
 
 #header .logo a {
-  color: #222222;
+  color: #fffefe;
 }
 
 #header .logo img {
@@ -155,7 +155,7 @@ h6 {
 }
 
 .header-social-links a {
-  color: #6f6f6f;
+  color: #141ede;
   padding-left: 6px;
   display: inline-block;
   line-height: 0px;
@@ -198,7 +198,7 @@ h6 {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: 600;
-  color: #888888;
+  color: #fff;
   white-space: nowrap;
   transition: 0.3s;
   position: relative;
@@ -218,7 +218,7 @@ h6 {
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color: #34b7a7;
+  background-color: #6a3e1b;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -421,7 +421,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/photo.jpg") top right;
   background-size: cover;
 }
 
